# imgsh

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
imgsh/: __init__.py  __main__.py  config.py
imgsh/cli/: __init__.py  batch.py  convert.py  crop.py  extract_text.py  gui_cmd.py  main.py  resize.py
imgsh/core/: __init__.py  crop_engine.py  errors.py  format_engine.py  metadata.py  ocr_engine.py  processor.py  resize_engine.py
imgsh/gui/: __init__.py  app.py  resize_view.py
imgsh/utils/: __init__.py  file_utils.py  validation.py
imgtool/: __init__.py  __main__.py
imgtool/cli/: __init__.py  batch.py  convert.py  extract_text.py  gui_cmd.py  main.py  resize.py
imgtool/core/: errors.py  format_engine.py  ocr_engine.py  processor.py  resize_engine.py
imgtool/gui/: __init__.py  app.py  resize_view.py
imgtool/utils/: __init__.py  file_utils.py  validation.py
tests/: test_cli_crop.py  test_crop_engine.py  test_validation.py
